--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Producers\SymptomsProducer.cs" />
     <Compile Include="Producers\WordsProducer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelayCommand.cs" />
+    <Compile Include="Framework\RelayCommand.cs" />
     <Compile Include="Screens\LoginViewModel.cs" />
     <Compile Include="Screens\MainWindowViewModel.cs" />
     <Compile Include="Screens\PatientsAsideViewModel.cs" />
@@ -113,7 +113,7 @@
     <Compile Include="Search\Searchers\WordCompositeSearcher.cs" />
     <Compile Include="Search\Searchers\WordSearcher.cs" />
     <Compile Include="Search\Searchers\WordTopParentSearcher.cs" />
-    <Compile Include="ViewModelBase.cs" />
+    <Compile Include="Framework\ViewModelBase.cs" />
     <Compile Include="WithAddNew.cs" />
   </ItemGroup>
   <ItemGroup>
