--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -143,6 +143,9 @@
     <Compile Include="Search\HierarchicalSearchSettings.cs" />
     <Compile Include="Search\HrSearchOptions.cs" />
     <Compile Include="Search\HrSearchResultViewModel.cs" />
+    <Compile Include="Search\NewSearchers\DiagnosisSearchers.cs" />
+    <Compile Include="Search\NewSearchers\INewSearcher.cs" />
+    <Compile Include="Search\NewSearchers\WordSearchers.cs" />
     <Compile Include="Search\PopupSearch.cs" />
     <Compile Include="Search\Searchers\DiagnosisFiltratingSearcher.cs" />
     <Compile Include="Search\Searchers\DiagnosisSearcher.cs" />
