--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -125,6 +125,9 @@
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\PatientRepository.cs" />
+    <Compile Include="Specs\DiagnosisSpecifications.cs" />
+    <Compile Include="Specs\PatientSpecifications.cs" />
+    <Compile Include="Specs\WordSpecifications.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="NHibernate\hibernate.cfg.xml">
