--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Search\AutoCompletes\DiagnosisAutoComplete.cs" />
     <Compile Include="Search\AutoCompletes\WordCompositeAutoComplete.cs" />
     <Compile Include="Search\AutoCompletes\WordRootAutoComplete.cs" />
+    <Compile Include="Search\NewFilter.cs" />
     <Compile Include="Search\Filter.cs" />
     <Compile Include="Search\HierarchicalSearchSettings.cs" />
     <Compile Include="Search\HrSearchOptions.cs" />
