--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -138,6 +138,9 @@
     <Compile Include="Search\AutoCompletes\DiagnosisAutoComplete.cs" />
     <Compile Include="Search\AutoCompletes\WordCompositeAutoComplete.cs" />
     <Compile Include="Search\AutoCompletes\WordRootAutoComplete.cs" />
+    <Compile Include="Search\Autocomplete\Autocomplete.cs" />
+    <Compile Include="Search\Autocomplete\Recognizer.cs" />
+    <Compile Include="Search\Autocomplete\Tag.cs" />
     <Compile Include="Search\NewFilter.cs" />
     <Compile Include="Search\Filter.cs" />
     <Compile Include="Search\HierarchicalSearchSettings.cs" />
