remove useless AutoCompletes

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -134,10 +134,7 @@
     <Compile Include="Screens\SearchViewModel.cs" />
     <Compile Include="Screens\SettingsViewModel.cs" />
     <Compile Include="Screens\WordsListViewModel.cs" />
-    <Compile Include="Search\AutoCompletes\AutoCompleteBase.cs" />
-    <Compile Include="Search\AutoCompletes\DiagnosisAutoComplete.cs" />
-    <Compile Include="Search\AutoCompletes\WordCompositeAutoComplete.cs" />
-    <Compile Include="Search\AutoCompletes\WordRootAutoComplete.cs" />
+    <Compile Include="Search\Autocomplete\AutoCompleteBase.cs" />
     <Compile Include="Search\Autocomplete\Autocomplete.cs" />
     <Compile Include="Search\Autocomplete\Recognizer.cs" />
     <Compile Include="Search\Autocomplete\Tag.cs" />
