--- a/Diagnosis.Core/Diagnosis.Core.csproj
+++ b/Diagnosis.Core/Diagnosis.Core.csproj
@@ -88,6 +88,7 @@
     <Compile Include="DateOffset.cs" />
     <Compile Include="Extensions\ConvertExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="INCCReadOnlyObservableCollection.cs" />
     <Compile Include="Interfaces\IAutoComplete.cs" />
     <Compile Include="Mediator\Events.cs" />
     <Compile Include="Util\Comparers.cs" />
