--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -127,7 +127,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Framework\RelayCommand.cs" />
     <Compile Include="Screens\LoginViewModel.cs" />
-    <Compile Include="Screens\MainWindowViewModel.cs" />
+    <Compile Include="Screens\Shell\MainWindowViewModel.cs" />
     <Compile Include="Screens\PatientsListViewModel.cs" />
     <Compile Include="Screens\Shell\AsideViewModel.cs" />
     <Compile Include="Screens\Shell\MenuBarViewModel.cs" />
