--- a/Diagnosis.Data/packages.config
+++ b/Diagnosis.Data/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net40" />
   <package id="LinqSpecs" version="1.0" targetFramework="net40" />
+  <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
   <package id="NHibernate.SetForNet4" version="1.0.3" targetFramework="net40" />
 </packages>
