--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -89,9 +89,9 @@
       <Project>{d7949590-a383-4e34-9c06-a2568db5cdb6}</Project>
       <Name>Diagnosis.App</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Diagnosis.Core\Diagnosis.Core.csproj">
+    <ProjectReference Include="..\Diagnosis.Common\Diagnosis.Common.csproj">
       <Project>{a91ad3b7-cb0f-426c-a539-1cffc13df0ee}</Project>
-      <Name>Diagnosis.Core</Name>
+      <Name>Diagnosis.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Diagnosis.Data\Diagnosis.Data.csproj">
       <Project>{3ec8d3df-aa44-4cb8-8847-d4b4872e9dad}</Project>
