--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Mappings\IcdDiseaseMap.cs" />
     <Compile Include="Mappings\IcdBlockMap.cs" />
     <Compile Include="Mappings\IcdChapterMap.cs" />
+    <Compile Include="Mappings\SpecialityIcdBlockMap.cs" />
     <Compile Include="Mappings\WordMap.cs" />
     <Compile Include="Mappings\HealthRecordMap.cs" />
     <Compile Include="Mappings\DoctorMap.cs" />
